# otp-secret-share

./: README.md  mkdocs.yml  pyproject.toml  secret.py
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.md
otp_secret_sharing/: display.py  secret.py  utils.py
tests/: conftest.py  test_utils.py
