[tool.poetry]
name = "otp-secret-sharing"
version = "0.1.0"
description = ""
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "otp_secret_sharing"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mkdocs-material = "^8.5.11"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
