[tool.poetry]
name = "otp-secret-sharing"
version = "0.1.1"
description = "One-time Pad secret sharing utility"
authors = ["Frank Hinek <frankhinek@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "otp_secret_sharing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pyinstaller = "^5.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
